코드 병합 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,16 +98,15 @@
             android:exported="true"
             android:theme="@style/Theme.MissingApp">
         </activity>
-
         <activity
-            android:name=".ActivityContainer"
+            android:name="com.android.congestionobserver.ActivityContainer"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
