--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/logo"
-        android:label="Missing app"
+        android:label="Guardia app"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.MissingApp"
@@ -33,6 +33,15 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <activity android:name=".Intro_activity"
+            android:exported="true"
+            android:theme="@style/Theme.MissingApp">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".Intro"
             android:exported="true"
@@ -54,18 +63,10 @@
             android:theme="@style/Theme.MissingApp">
         </activity>
 
-        <activity android:name=".HomeActivity"
-            android:exported="true"
-            android:theme="@style/Theme.MissingApp">
-        </activity>
-
+        <!-- SignIn 액티비티에서 intent-filter 제거 -->
         <activity android:name=".SignIn"
             android:exported="true"
             android:theme="@style/Theme.MissingApp">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".SignUp"
